Index, header css Minor fix to contact section where email would cause x-overflow Fixed input being too big on mobile

--- a/docs/src/css/header.css
+++ b/docs/src/css/header.css
@@ -215,3 +215,9 @@ width: 100%;
   height: 100%;
   fill: none;
 }
+
+@media (max-width: 512px){
+    .searchbar-form{
+        --width-of-input: 120px;
+    }
+}
